# Pancreas

./: CMakeLists.txt  Parser.cpp  Parser.h  README.md  VolumeReconstructor.cpp  VolumeReconstructor.h  VolumeReconstructor.kdev4  imageprocessor.cpp  imageprocessor.h  insertslice.cpp  insertslice.h  main.cpp
